tests/should_fail/tuple_destructure_mismatch.nv
module main

// SHOULD FAIL: Tuple destructuring with wrong number of bindings
let t = (1, "hello", true)
let (a, b) = t
